    [project]
    name = "rag-agent"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    requires-python = ">=3.12"
    dependencies = [
        "beautifulsoup4>=4.14.2",
        "black>=25.11.0",
        "chromadb>=1.3.4",
        "isort>=7.0.0",
        "langchain>=1.0.7",
        "langchain-chroma>=1.0.0",
        "langchain-community>=0.4.1",
        "langchain-google-genai>=3.1.0",
        "langchain-openai>=1.0.3",
        "langchainhub>=0.1.21",
        "langgraph>=1.0.3",
        "pytest>=9.0.1",
        "python-dotenv>=1.2.1",
        "tavily-python>=0.7.13",
]
